@@ -56,7 +56,7 @@ libkjs_la_SOURCES = \
 	ustring.h \
 	$(NULL)
 
-BUILT_SOURCES = grammar.cpp grammar.cpp.h
+BUILT_SOURCES = grammar.cpp grammar.cpp.h grammar.h
 
 noinst_PROGRAMS = testkjs
 
@@ -65,12 +65,11 @@ testkjs_SOURCES = testkjs.cpp
 testkjs_LDADD = $(srcdir)/libkjs.la
 
 CLEANFILES = $(BUILT_SOURCES) \
-	grammar.h \
 	$(NULL)
 
 YACCFLAGS = -d --output-file=grammar.cpp --file-prefix=grammar --name-prefix=kjsyy
 
-grammar.h grammar.cpp: grammar.y
+grammar.h grammar.cpp.h grammar.cpp: grammar.y
 	$(YACC) $(YACCFLAGS) $<
 	ln -sf grammar.cpp.h grammar.h
 
